@@ -449,15 +449,7 @@ final class ExecutionWorkPlannerTest {
     }
 
     @Test
-    void plannerNormalizesGatewayDirectorAppointmentTargetWhenFrontierGuessesWrongTarget() {
-        // Reproduces a real production incident (2026-09-16): the deterministic composer above only
-        // fires when the objective text explicitly says "gateway director"/"gateway head"/etc. Here the
-        // objective never mentions Gateway Director at all -- it asks for worker cognition -- but the
-        // frontier planner independently decided to insert a workforce.staffing.gateway-director
-        // prerequisite step and guessed target="workforce" (a plausible-sounding but wrong value; the
-        // capability's AuthorityManifestCatalog entry only matches ROLE-HEAD-OF-GATEWAY/
-        // position:gateway-director). Before this fix, AuthorityManifestCatalog.resolve("workforce")
-        // threw AUTHORITY_UNRESOLVED and permanently blocked the Objective in production.
+    void plannerStripsUnsolicitedGatewayDirectorStaffingBeforeTargetNormalization() {
         LlmProviderClient google = new LlmProviderClient() {
             @Override public LlmProvider provider() { return LlmProvider.GOOGLE; }
             @Override public LlmResponse complete(LlmRequest request) {
@@ -483,11 +475,47 @@ final class ExecutionWorkPlannerTest {
         List<ExecutionWorkSpec> plan = planner.plan("case-production-incident", normalized,
                 List.of("workforce.staffing.gateway-director", "worker.cognitive.work"));
 
-        assertEquals(2, plan.size());
-        assertEquals("workforce.staffing.gateway-director", plan.get(0).requiredCapability());
-        assertEquals("ROLE-HEAD-OF-GATEWAY", plan.get(0).target(),
-                "frontier-guessed target must be normalized to the exact authority manifest pattern");
-        assertEquals("worker.cognitive.work", plan.get(1).requiredCapability());
+        assertEquals(1, plan.size());
+        assertEquals("worker.cognitive.work", plan.getFirst().requiredCapability());
+        assertTrue(plan.getFirst().dependsOn().isEmpty(),
+                "dependency on the rejected unsolicited staffing step must also be removed");
+        assertTrue(plan.stream().noneMatch(step ->
+                "workforce.staffing.gateway-director".equals(step.requiredCapability())));
+    }
+
+    @Test
+    void plannerPreservesExplicitGatewayDirectorStaffingAndNormalizesTarget() {
+        LlmProviderClient google = new LlmProviderClient() {
+            @Override public LlmProvider provider() { return LlmProvider.GOOGLE; }
+            @Override public LlmResponse complete(LlmRequest request) {
+                return new LlmResponse(LlmProvider.GOOGLE, "planner-test", """
+                        {"execution_work_plan":[
+                          {"step_id":"step-1","objective":"appoint the Gateway Director","target":"workforce","required_capability":"workforce.staffing.gateway-director","depends_on":[],"consequence":"MUTATING","acceptance_criteria":["staffed"],"evidence_requirements":["observation-capability:workforce.staffing.gateway-director"]}
+                        ]}
+                        """, "planner-ref");
+            }
+        };
+        ExecutionWorkPlanner planner = new ExecutionWorkPlanner(
+                new LlmProviderRouter(List.of(google)), provider -> "planner-test",
+                List.of(LlmProvider.GOOGLE), new ObjectMapper());
+        NormalizedRequest normalized = new NormalizedRequest(
+                "Create a Workforce Worker and appoint it as the Gateway Director / Head of Gateway",
+                "ROLE-HEAD-OF-GATEWAY",
+                List.of("persistent institutional Worker", "use governed Workforce staffing"),
+                IntelligenceDepth.ANALYZE,
+                "appointment confirmation with Worker, role and runtime evidence",
+                List.of(), List.of(), "", "", IntelligenceMode.EXECUTION,
+                CollaborationMode.SINGLE, List.of(), DeterministicCapability.NONE,
+                List.of(), List.of(), false, LlmProvider.GOOGLE, LlmProvider.GOOGLE, "");
+
+        List<ExecutionWorkSpec> plan = planner.plan(
+                "case-explicit-gateway-director-appointment",
+                normalized,
+                List.of("workforce.staffing.gateway-director"));
+
+        assertEquals(1, plan.size());
+        assertEquals("workforce.staffing.gateway-director", plan.getFirst().requiredCapability());
+        assertEquals("ROLE-HEAD-OF-GATEWAY", plan.getFirst().target());
     }
 
     @Test
